app/assets/stylesheets/custom.css.scss
@import "bootstrap";
@import url(https://fonts.googleapis.com/css?family=Open+Sans:300);

html, body {
	font-family: 'Open Sans', sans-serif;
	color: #00A480
}

a {
	color: #444;
	&:hover {
		text-decoration:none;
		color: #aaa;
	}
}

p {
	font-size:22px;
	line-height: 150%;
}

.center {
	text-align:center
}

.title1 {
	font-size:30px;
	padding-bottom: 30px;
	padding-top:50px
}

.title2 {
	font-size: 26px;
	padding-bottom: 20px;
	color:#888
}

.sub-title {
	font-size: 18px;
}

.page-container-0 {
	width:100%;
	padding-top: 100px;
	padding-bottom:100px;
	background-color: #262626;
	text-align:center
}

.page-container-1 {
	width:100%;
	padding-top: 100px;
	padding-bottom:100px;
	background-color: #f0f0f0;
	box-shadow: 0px 0px 0px 2px #ddd;
	text-align:center;
}

.page-container-2 {
	width:100%;
	padding-top: 100px;
	padding-bottom:100px;
	text-align: center;

}

.main-links-container {
	margin-top: 20px;
}

.main-links {
	display: inline-block;
	width: 150px;
	color: white;
	padding:20px;
	border-radius:3px;
	font-size: 18px;
}

.project-links {
	background-color: #a31e39;
	width:220px;  
	padding:20px 40px 20px 40px;
	margin-bottom: 15px;
	color:white;
	border-radius: 3px;
	display: inline-block;
}

.caption {
	font-size: 14px;
}

.dcpic {
	background-image: url(/assets/dcmini.jpg);
	height:300px; 
	width:500px; 
	margin: 0 auto; 
	background-size:500px 300px;
	border-radius: 3px;
}

.dcpic-cover {
	width:100%;
	height:100%; 
	background-color: rgba(0,0,0,.50);
	color:white; 
	text-align:center; 
	border-radius:3px
}

.raspberrypic {
	background-image: url(/assets/raspberrypi.jpg);
	height:200px; 
	width:300px;  
	background-size:300px 200px;
	border-radius: 3px;
	margin: 0 auto;
}

.raspberrypic-cover {
	width:100%;
	height:100%; 
	background-color: rgba(0,0,0,.75);
	color:white; 
	text-align:center; 
	border-radius:3px;

}


.github {
	background-color: #555;
}
.linkedin {
	background-color: #0181B2;
}

.facebook {
	background-color: #3B5998;
}

.spectize {
	background-color: #a31e39
}

.school-spacing {
	line-height:170%;
	padding:20px;
}

.profpic {
	border-radius: 100px;
}

